Update to validateAppointment to avoid scheduling appointments in the past